<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_article"
        android:icon="@drawable/ic_article"
        android:title="@string/article" />

    <!-- Spacer item agar Scan di tengah -->
    <item
        android:id="@+id/navigation_spacer"
        android:title=""
        android:icon="@android:color/transparent"
        android:enabled="false"
        android:checkable="false" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>
