<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white_primary"
        android:padding="12dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageArticle"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            android:background="@drawable/rounded"
            android:src="@drawable/logo"
            android:contentDescription="@string/image"
            android:clipToOutline="true" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="12dp">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_article"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black_secondary" />

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle"
                android:textSize="14sp"
                android:textColor="@color/black_secondary"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginTop="4dp" />

            <TextView
                android:id="@+id/textDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="12sp"
                android:textColor="@color/black_disabled"
                android:layout_marginTop="6dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
