<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.forgot_password.ForgotPasswordActivity">

    <!-- ScrollView with form content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:gravity="center_horizontal">

            <!-- ImageView for Logo or Image -->
            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:src="@mipmap/forgot_password"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/illustration" />

            <!-- Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black_secondary"
                android:gravity="center"
                android:layout_marginBottom="16dp" />

            <!-- Description -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_description"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginBottom="24dp"
                android:textColor="@color/black_hint" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:textColor="@color/black_secondary"
                android:layout_marginBottom="1dp"
                android:layout_gravity="start" />

            <!-- Email Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cursorColor="@color/green_light"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="16dp">

                <pnj.pk.pareaipk.custom_view.EmailEditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/rounded"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black_secondary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sendResetLinkButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/change_password"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                app:cornerRadius="10dp"
                app:strokeWidth="2dp"
                app:strokeColor="@color/green_light"
                app:backgroundTint="@color/green_light"/>
        </LinearLayout>
    </ScrollView>

    <!-- ProgressBar placed on top -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        android:indeterminate="true"
        android:elevation="4dp"
        android:indeterminateTint="@color/green_light"
        android:layout_gravity="center" />

</FrameLayout>
